build/apps/esphome/overlays/iot-k3s/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: iot-k3s
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: iot.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`esphome.iot.anotherlife.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: esphome
          port: 6052
  tls:
    domains:
      - main: iot.anotherlife.pl
        sans:
          - .iot.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-iot
